--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +6,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding-top: 60px;
+
 }
 
 code {
@@ -18,4 +21,16 @@ code {
 
 .users{
     margin-left: 10px;
+}
+
+.dropdown-menu {         
+  max-height: 200px;
+  overflow-y: auto;
+}
+.bgimg{
+  height: 89vh;
+  width: max-content;
+  background-position: center;
+  background-size: cover;
+  margin-left: 15px;
 }
