--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,41 @@
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding-top: 60px;
-
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  width: 100%;
 }
 
-.pincss{
-  margin-left: 10px;
+.pincss {
+  padding: 5px;
+  display: flex;
+  width: 100%;
 }
 
-.users{
-    margin-left: 10px;
+.users {
+  padding: 10px;
 }
 
-.dropdown-menu {         
+.dropdown-menu {
   max-height: 200px;
   overflow-y: auto;
 }
-.bgimg{
+.bgimg {
   height: 89vh;
   width: max-content;
   background-position: center;
@@ -35,12 +43,20 @@ code {
   margin-left: 15px;
 }
 
-  .header
-{  
-    background-image: linear-gradient(to right bottom,rgba(54, 54, 54, 0.822),rgba(0, 0, 0, 0.685)),url('https://www.thenewsminute.com/sites/default/files/COVID19Vaccine-GenericRepresentative-231020-1200x800-Picxy.jpg');
-    height: 90vh;
-    background-size: cover;
-    background-position: top;
-    position: relative;
-    
+.header {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(54, 54, 54, 0.822),
+      rgba(0, 0, 0, 0.685)
+    ),
+    url("https://www.thenewsminute.com/sites/default/files/COVID19Vaccine-GenericRepresentative-231020-1200x800-Picxy.jpg");
+  height: 90vh;
+  background-size: cover;
+  background-position: top;
+  position: relative;
+}
+@media only screen and (max-width: 540px) {
+  .pincss {
+    flex-direction: column;
+  }
 }
